--- a/roboshop.conf
+++ b/roboshop.conf
@@ -7,7 +7,7 @@ location /images/ {
 location /api/catalogue/ { proxy_pass http://catalogue.joindevops.store:8080/; }
 location /api/user/ { proxy_pass http://user.joindevops.store:8080/; }
 location /api/cart/ { proxy_pass http://cart.joindevops.store:8080/; }
-location /api/shipping/ { proxy_pass http://localhost:8080/; }
+location /api/shipping/ { proxy_pass http://shipping.joindevops.store:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
 location /health {
